# salt-ai

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  blueprint.canvas  pyproject.toml
.github/workflows/: black-check.yml  unit-tests.yml
saltai/artifacts/checkpoints/: manager.py
saltai/artifacts/store/: local.py
saltai/config/schemas/: base.py
saltai/config/validation/: validate.py
saltai/engine/event_bus/: bus.py
saltai/engine/runner/: runner.py
saltai/logging/: setup.py  stdlib.py
saltai/logging/sinks/: console.py  jsonl.py  python_logging.py
saltai/logging/utils/: jsonable.py
saltai/manifest/io/: writer.py
saltai/manifest/model/: run.py
saltai/utils/errors/: __init__.py  base.py  codes.py  helpers.py  signals.py
saltai/utils/hashing/: stable.py
saltai/utils/typing/: __init__.py  core.py  events.py  json_types.py
tests/unit/artifacts/: test_checkpoints.py  test_local_store.py  test_runner_checkpoints.py
tests/unit/config/: test_config_hash.py  test_config_validate.py
tests/unit/engine/: test_event_bus.py  test_jsonl_logger.py  test_runner.py  test_runner_artifacts.py
tests/unit/manifest/: test_manifest_write.py
tests/unit/utils/: test_errors_base.py  test_errors_helpers.py  test_errors_signals.py  test_typing_core.py
