[project]
name = "salt-ai"
version = "0.1.1"
description = "Lightweight ML pipeline library: configs, data modules, training engine, artifacts, and optional integrations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "D1ffic00lt", email = "dm.filinov@gmail.com" },
]
keywords = ["salt", "ai", "machine-learning"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Repository = "https://github.com/D1ffic00lt/salt-ai"
"Bug Tracker" = "https://github.com/D1ffic00lt/salt-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["saltai*", "saltai_ext*"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry]
packages = [
  { include = "saltai" },
  { include = "saltai_ext" },
]