[tool.poetry]
name = "salt-ai"
version = "0.1.1"
description = "Lightweight ML pipeline library: configs, data modules, training engine, artifacts, and optional integrations."
authors = ["D1ffic00lt <dm.filinov@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["salt", "ai", "machine-learning"]
repository = "https://github.com/D1ffic00lt/salt-ai"

packages = [
  { include = "saltai" },
  { include = "saltai_ext" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

#[tool.poetry.group.dev.dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/D1ffic00lt/salt-ai/issues"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
black = "^26.1.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"